--- a/cjh/config.json
+++ b/cjh/config.json
@@ -1,6 +1,6 @@
 {
   "terminal": "terminator -x", 
-  "shell": "Tk", 
+  "shell": "bash", 
   "editor": "tk_text.py", 
   "language": "EN", 
   "acsiimation": "bounce_demo.py"
